# jarvis

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  build_esp32.sh  build_web.sh  custom_partitions.csv  sdkconfig
main/: CMakeLists.txt  ble_service.cpp  ble_service.h  jarvis_main.cpp  motor_controller.cpp  motor_controller.h
main/include/: svelteesp32.h
main/includes/: svelteesp32.h
main/services/: ble.hh
main/services/web/: http_server.cc  http_server.hh
main/services/wifi/: wifi.cc  wifi.hh
web/: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
web/scripts/: ensure-svelte-shims.cjs
web/src/: App.svelte  app.postcss  main.ts
